[package]
name = "cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2"
flate2 = "1.0.27"
num = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.2"
tar = { version = "0.4.40", features = [] }
